# frappe_vault

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ADMIN_GUIDE.md  API_REFERENCE.md  ARCHITECTURE.md  USER_GUIDE.md
frappe_vault/: hooks.py  modules.txt  patches.txt  utils.py
frappe_vault/fixtures/: custom_field.json
frappe_vault/frappe_vault/: module.txt
frappe_vault/frappe_vault/doctype/vault_storage/: vault_storage.json  vault_storage.py  vault_storage_custom_fields.json
frappe_vault/frappe_vault/patches/v0_1/: register_custom_fields.py
frappe_vault/frappe_vault/utils/: register_s3_files.py
frappe_vault/frappe_vault/workspace/frappe_vault/: frappe_vault.json
s3vault/: hooks.py  patches.txt  utils.py
s3vault/fixtures/: custom_field.json  workspace_sidebar.json
s3vault/vault/doctype/vault_storage/: vault_storage.json  vault_storage.py  vault_storage_custom_fields.json
s3vault/vault/patches/v0_1/: register_custom_fields.py
s3vault/vault/utils/: register_s3_files.py
s3vault/vault/workspace/vault/: vault.json
