[project]
name = "s3vault"
authors = [{ name = "County Network Kenya", email = "dev@skillwave.ke" }]
description = "Secure unified private file serving for Frappe/ERPNext — local disk and S3-compatible object storage"
requires-python = ">=3.10"
dynamic = ["version"]
dependencies = ["minio>=7.0.0"]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.frappe-dependencies]
frappe = ">=16.0.0"

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
